--- a/.eslintrc-jsc.yml
+++ b/.eslintrc-jsc.yml
@@ -12,6 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+#extends:
+#  - google
+#rules: { no-var: 0 }
+
+env:
+  node: true
+  es6: true
 extends:
   - google
-rules: { no-var: 0 }
+root: true
