--- a/.eslintrc-jsc.yml
+++ b/.eslintrc-jsc.yml
@@ -12,13 +12,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# extends:
+#   - google
+# rules: { 
+#   no-var: 0, 
+#   quotes: 0,
+#   indent: 0,
+#   space-before-function-paren: 0,
+#  object-curly-spacing: 0
+# }
+
 extends:
   - google
-rules: { 
-  no-var: 0, 
-  quotes: 0,
-  indent: 0,
-  space-before-function-paren: 0,
-  object-curly-spacing: 0
-}
-
+  - prettier
+rules: { no-var: 0 }
