--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "npm run unit-test && npm run integration-test",
     "unit-test": "nyc --reporter=text mocha --recursive \"./test/unit/*.js\"",
     "integration-test": "cucumber-js ./test/integration",
-    "lint": "./node_modules/apigeelint/cli.js -s ./apiproxy -f table.js -e PO013"
+    "lint": "./node_modules/apigeelint/cli.js -s ./apiproxy -f html.js -e PO013"
   },
   "dependencies": {
     "apickli": "^2.3.3",
